--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -1,12 +1,13 @@
 :root {
     --mcd-main-background: #faf5d8;
-    --mcd-main-text: #605b4c;
-    --mcd-main-accent: #a88e23;
+    --mcd-main-text: #353230;
+    --mcd-main-accent: #916d1b;
     --mcd-main-decoration: #ceccaf;
-    --mcd-accent-background: #f8e060;
-    --mcd-accent-text: #605b4c;
-    --mcd-background: #684c10;
+    --mcd-accent-background: #f8e8a0;
+    --mcd-accent-text: #353229;
+    --mcd-background: #362707;
     --mcd-background-text: #f0e8b0;
+    --mcd-background-accent: #ffe840;
 
     --mcd-latin-font: "Exo 2 Variable", "Exo 2", Verdana, Helvetica, Arial;
     --mcd-zh-font: "思源黑体", "微软雅黑", "宋体";
